# EBImage

./: .BBSoptions  CHANGES  DESCRIPTION  DONE  INSTALL  LICENSE  NAMESPACE  README.md  TODO  TODO_AND_BUGS  configure  configure.ac  configure.win
R/: AllDeprecated.R  AllGenerics.R  Image.R  __init.R  abind.R  alg.watershed.R  algorithms2D.R  allGenerics.R  clahe.R  class.Drawable.R  class.Image.R  class.Image2D.R  class.Image3D.R  class.IndexedImage.R  colormap.R  colors.R  computeFeatures.R  defunct.R  deprecated.R  display.R  drawCircle.R  drawable.R  drawables.R  equalize.R  featureDetection.R  features.R  filter2.R  filters.R  filters.standard2D.R  filters2D.R  filters2D.magick.R  floodFill.R  flt.distmap.R  flt.magick.R  flt.morph.R  flt.thresh.R  frameDist.R  gblur.R  haralick.features.R  hull.features.R  (+21 more)
data/: imageWithHoles.rda
inst/: CITATION  NEWS.Rd
inst/code/: display.css  display.html  display.template  script.js
inst/data/: examples
inst/doc/: AnalysisWithEBImage.Rnw  EBImage-installation.Rnw  EBImage-introduction.Rnw  EBImage.Rnw  EBImageHOWTO.Rnw  EBImageHOWTO.Rnw.DEV  EBImageHOWTO.~Rnw  EBImageInstallHOWTO.Rnw  Rnews.sty  ebimage.tex  tests_and_reports.txt
inst/docs/: algorithms.txt
inst/htmlwidgets/: displayWidget.js  displayWidget.yaml
inst/htmlwidgets/lib/viewer/: display.css  viewer.js
inst/images/: Gene1_G.tif  Gene1_R.tif  Gene2_G.tif  Gene2_R.tif  cells.tif  nuclei.tif
inst/old.src/R/: algorithms2D.R  zzz.Deprecated.R
inst/old.src/man/: algorithms2D.objectCount.Rd
inst/old.src/src/: algorithms2D.cpp  algorithms2D.h
inst/scripts/: cellCountScript.R  figDistanceMapDemo.R  newAgainstOld.R  newAgainstOld.Rout.save  readWriteTest.R  readWriteTest.Rout.save  test.R  testReadImage.R  tools.R  ws.test.R
inst/src/: CMakeLists.txt  adapt_threshold.cpp  adapt_threshold.h  common.h  conversions.cpp  conversions.h  display.cpp  distmaps.cpp  distmaps.h  io.cpp  objectcount.cpp  objectcount.h  stdFilters.cpp  stdFilters.h
inst/viewer/: display.css  display.template  viewer.js
man/: Drawable.class.Rd  Drawable.draw.Rd  EBImage-defunct.Rd  EBImage-deprecated.Rd  EBImage-package.Rd  EBImage.Rd  Image.Rd  Image.class.Rd  Image.generic.methods.Rd  Image.io.Rd  abind.Rd  alg.watershed.Rd  algorithms2D.objectCount.Rd  blur.Rd  bwlabel.Rd  channel.Rd  clahe.Rd  class.Drawable.Rd  class.Image.Rd  class.Image2D.Rd  class.Image3D.Rd  class.IndexedImage.Rd  colorLabels.Rd  colormap.Rd  colors.Rd  colors.arithm.Rd  combine.Rd  combineObjects.Rd  computeFeatures.Rd  constructors.Rd  denoising.Rd  display-shiny.Rd  display.Rd  displayRaster.Rd  distMap.Rd  distmap.Rd  drawCircle.Rd  drawable.Rd  enhancing.Rd  equalize.Rd  (+72 more)
src/: EBImage.c  EBImage.h  Makevars.in  Makevars.win  adapt_threshold.cpp  alg_watershed.cpp  alg_watershed.h  algorithms2D.cpp  clahe.c  clahe.h  colors.c  colors.cpp  colors.h  common.cpp  common.h  conversions.c  conversions.cpp  conversions.h  display.c  display.cpp  display.h  distmap.c  distmap.cpp  distmap.h  distmaps.cpp  distmaps.h  drawCircle.c  drawCircle.h  drawable.c  drawable.h  drawables.cpp  drawables.h  features_haralick.c  features_haralick.h  features_hull.c  features_hull.h  features_moments.c  features_moments.h  features_zernike.c  features_zernike.h  (+85 more)
tests/: test.R  test.Rout.save
vignettes/: EBImage-introduction.Rmd  EBImage-introduction.Rnw
